# Man10Routine

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: cache-clean.yaml  clippy.yaml  docker.yaml  format.yaml  test.yaml
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  polling.rs  raw.rs
src/kubernetes_objects/: argocd.rs  custom_job.rs  job.rs  minecraft_chart.rs  mod.rs  statefulset.rs
src/kubernetes_objects/argocd/: initialize.rs  mod.rs  tearing.rs
src/routine/: daily.rs  mod.rs
src/routine/daily/: error.rs  finalizer.rs  mod.rs  phase1.rs  phase2.rs  phase3.rs  phase_argocd_teardown.rs  phase_execute_job.rs  phase_relaunch_mcproxy.rs  phase_relaunch_mcserver.rs  phase_shutdown_mcproxy.rs  phase_shutdown_mcservers.rs  scale_statefulset.rs  scheduler.rs  shutdown.rs  wait_until_job_finished.rs  wait_until_pod_stopped.rs  wait_until_statefulset_scaled.rs
src/scheduler/: dag_scheduler.rs  mod.rs  shutdown.rs
