[package]
name = "man10_routine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime", "ws"] }
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kcr_argoproj_io = "2.20251113.194744"
serde_json = "1.0.145"
derive-debug = "0.1.2"
serde_yaml = "0.9.34"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-error = { version = "0.2.1", features = ["traced-error"] }
color-spantrace = "0.3.0"
json-patch = "4.1.0"
